--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
     <!-- Main Content -->
     <main>Main content</main>
     <!-- Footer -->
-    <footer>Footer</footer>
+    <footer>
+        <ul>
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)">Facebook</a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
