--- a/index.html
+++ b/index.html
@@ -40,12 +40,15 @@
     <!-- Footer -->
     <footer>
         <ul>
-            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)">Facebook</a></li>
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
             <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
             <li><a href="" target="_blank"></a></li>
         </ul>
     </footer>
+
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/cc99a6b426.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
