--- a/index.html
+++ b/index.html
@@ -40,7 +40,14 @@
     <!-- Main Content -->
     <main>
         <section id="hero">
-            
+            <div id="cover-text">
+                <h2>
+                    Love Running
+                </h2>
+                <h3>
+                    Dublin docklands and Phoenix Park
+                </h3>
+            </div>
         </section>
     </main>
     <!-- Footer -->
