Hide section heading with utility class

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
             </div>
         </section>
         <section id="meetups">
-            <h2>Meet-up Times</h2>
-            
+            <h2 class="hidden-heading">Meet-up Times</h2>
+
             <!-- Meetup times section -->
              <div id="times">
                 <div>
