sign up styles done, corrected previous mistakes, double checked all with source code and diffchecker

--- a/signup.html
+++ b/signup.html
@@ -51,7 +51,7 @@
                 <input type="text" name="Last Name" id="last-name" class="text-input" required>
                 <br>
                 <label for="email-address">Email Address</label>
-                <input type="email" name="Email Address" id="email-address" class="text-input" required>
+                <input type="email" name="email_address" id="email-address" class="text-input" required>
                 <br>
                 <div class="radio-buttons">
                     <div>
@@ -60,11 +60,11 @@
                     </div>
                     <div>
                         <label for="trail">Trail</label>
-                        <input type="radio" name="running-preference" id="trail" value="trail">
+                        <input type="radio" name="running-preference" id="trail" value="trail" required>
                     </div>
                     <div>
                         <label for="both">Both</label>
-                        <input type="radio" name="running-preference" id="both" value="both">
+                        <input type="radio" name="running-preference" id="both" value="both" required>
                     </div>
                 </div>
                 <button type="submit" class="join-button">Let's Run!</button>
